--- a/Examples/simple/CMakeLists.txt
+++ b/Examples/simple/CMakeLists.txt
@@ -10,4 +10,6 @@ dotdependency(simple simple ON create.py)
 cppdependency(simple scheduler.cpp create.py)
 add_sdf_dir(simple)
 
+target_link_libraries(simple PRIVATE posix_runtime appcommon)
+
 target_include_directories(simple PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
